--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             Our Gathering Plan
         </h1>
 
-        <p>After the end of the lockdown in Austria, which is on the 19th of may, my friends and I planed to meet up and celebrate our regained freedom, without living day in and day out in our appartments.</p>
+        <p>After the end of the lockdown in Austria, which is on the 19th of May, my friends and I planned to meet up and celebrate our regained freedom, without living day in and day out in our apartments.</p>
 
-        <p>Firstly this site was made for learning purposes and on the other hand for giving my friends some inforamations of the gathering. For Instance when it will take part and where we can go.</p>
+        <p>This site was made for learning purposes and on the other hand for giving my friends some information about the gathering. For Instance when it will take part and where we can go.</p>
     </section>
 
     <section class="location">
         <h2>
             When & Where Will We Meet?
         </h2>
+
+        <h3>Friday May 21th!/h3></h3>
+        <p>Start at 15:00</p>
         <address>
-            <p>
-                Friday May 21th!
-            </p>
 
             <p>
                 Start at 15:00
@@ -50,6 +50,7 @@
 
         <p>Experience Iranian cuisine in the <a href="http://www.apadana.at/" target="blank"> Apadana Restaurant</a></p>
     </section>
+
     <section id="iframe">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10638.212355150596!2d16.3573546!3d48.1959617!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa9ea16e1ab170f3d!2sApadana%20Restaurant!5e0!3m2!1sen!2sat!4v1621008529946!5m2!1sen!2sat" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
             </iframe>
