--- a/index.html
+++ b/index.html
@@ -31,17 +31,13 @@
             When & Where Will We Meet?
         </h2>
 
-        <h3>Friday May 21th!/h3></h3>
-        <p>Start at 15:00</p>
-        <address>
+        <h3>Friday May 21th!</h3>
 
-            <p>
-                Start at 15:00
-            </p>
-
-            <p>
-               Favoritenstraße 226, 1100 Vienna, Austria 
-            </p>
+        <p>Starts promptly at <time>15:00</time></p>
+        
+        <address>       
+                Favoritenstraße 226, 
+                1100 Vienna, Austria 
         </address>
     </section>
 
